fix: поменял     z-index: 1;

--- a/src/components/PopupHeader/PopupHeader.module.scss
+++ b/src/components/PopupHeader/PopupHeader.module.scss
@@ -20,6 +20,7 @@
   &_open {
     visibility: visible;
     opacity: 1;
+    z-index: 1;
   }
 
   &__close {
