--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -1,14 +1,14 @@
 @import '../../styles/mixins';
 @import '../../styles/vars';
 
-.profile{
+.profile {
   position: fixed;
   top: 0;
   right: -100%;
   width: 100%;
   height: 100%;
   padding-left: 136px;
-  background-color:rgba(24, 38, 64, 0.60);
+  background-color: rgba(24, 38, 64, 0.6);
   justify-content: center;
   align-items: center;
   display: flex;
@@ -18,7 +18,8 @@
   &_opened {
     left: 0;
     visibility: visible;
-    opacity: 10;
+    opacity: 1;
+    z-index: 1;
   }
 }
 
@@ -26,7 +27,7 @@
   width: 100%;
   height: 100%;
   padding: 40px 20px;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .sheet {
@@ -46,7 +47,7 @@
   font-size: 13px;
   font-style: normal;
   font-weight: 700;
-  line-height: 16px; 
+  line-height: 16px;
 }
 
 .form {
